--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ repositories {
 
 dependencies {
 
-    deobfCompile "mezz.jei:jei_1.12.2:4.7.10.97"
+    deobfCompile "mezz.jei:jei_1.12.2:${jei_version}"
     deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:${top_version}"
     deobfCompile "mcp.mobius.waila:Hwyla:${HWYLA_version}_1.12"
     deobfCompile "cofh:RedstoneFlux:1.12-2.0.1.2:universal"
