--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 
-mcversion=1.12.2
-forgeversion=14.23.5.2768
+mcversion=1.15.2
+forgeversion=31.1.0
 forgeversion_suffix=
 
 curse_project_id=241941
@@ -11,6 +11,6 @@ curse_project_id=241941
 modversion=6.1.1
 releaseType=release
 
-top_version=1.12-1.4.19-11
-HWYLA_version=1.8.23-B38
-jei_version=4.7.10.97
+top_version=1.15-2.0.0-3
+HWYLA_version=1.10.8-B72_1.15.2
+jei_version=6.0.0.2
