--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 //	id "com.matthewprenger.cursegradle" version "1.0.7"
 //}
 
+apply plugin: 'idea'
 apply plugin: "net.minecraftforge.gradle"
 
 version = modversion
@@ -36,8 +37,8 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'stable', version: "60-1.15"
-//    mappings channel: 'snapshot', version: "20200318-1.15.1"
+//    mappings channel: 'stable', version: "60-1.15"
+    mappings channel: 'snapshot', version: "20200318-1.15.1"
 
     runs {
         client {
